syntax = "proto3";

package calculator;

service CalculatorService {
    // unary API
    rpc Sum (SumRequest) returns (SumResponse) {};

    // server streaming API
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);

    // client streaming API
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // bidirectional streaming AP
    rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

    // Error Handling
    // the RPC will throw an exception if the number is negative
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}

message SquareRootRequest {
    int64 number = 1;
}

message SquareRootResponse {
    double square_root = 1;
}

message FindMaximumRequest {
    int64 number = 1;
}

message FindMaximumResponse {
    int64 maximum = 1;
}

message ComputeAverageRequest {
    int64 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message SumRequest {
    int64 first_number = 1;
    int64 second_number = 2;
}

message SumResponse {
    int64 number = 1;
}